--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.example.ahs.entman"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -30,6 +30,8 @@ dependencies {
     compile 'com.android.support:support-v4:26.1.0'
     compile 'devlight.io:navigationtabbar:1.2.5'
     compile 'com.github.StevenDXC:DxLoadingButton:1.9'
+    compile 'com.github.aakira:expandable-layout:1.6.0@aar'
+    compile 'com.github.Shashank02051997:FancyAlertDialog-Android:0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
